Fix report archive z-index

--- a/assets/css/com/forms.less
+++ b/assets/css/com/forms.less
@@ -19,6 +19,7 @@
   width: 100%;
   height: 100%;
   background: fadeout(#000, 60%);
+  z-index: 10;
 
   &.visible {
     display: block;
